Fixed title on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -670,6 +670,11 @@ table.no-spacing
         grid-template-rows: 1fr;
     }
 
+    #game-title
+    {
+        font-size: 5vw;
+    }
+
     .timer
     {
         display: flex;
